[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vllm-orchestrator"
version = "0.1.0"
description = "Stateful orchestration layer for vLLM with Responses API, file search, and tool execution"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "vLLM Orchestrator Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Database and storage
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "pgvector>=0.2.0",
    "aiofiles>=23.0.0",

    # HTTP client and streaming
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",

    # AI/ML dependencies
    "openai>=1.0.0",
    "tiktoken>=0.6.0",

    # Caching and performance
    "redis>=5.0.0",

    # Production features
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "uvloop>=0.19.0",
    "httptools>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
vllm-orchestrator = "vllm_orchestrator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vllm_orchestrator"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
